<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="22sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:onClick="onNumeroSimcard"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/obtener_n_mero_de_simcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onMakeScreenshot"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/tomar_captura_de_una_vista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onScaleGesture"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/cambiar_tamano_con_pellisco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onDualTouch"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/cambiar_tama_o_con_dualtouch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onChangeThemeDynamically"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/cambiar_tema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onRetrofitRxJava"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/retrofit_rxjava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onRetrofitLiveData"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/retrofit_livedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>