<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screenshot.MakeScreenshotActivity">
    <FrameLayout
        android:background="@color/gris_f8f8f8"
        android:id="@+id/container_views"
        android:layout_above="@+id/btn_make_screenshot"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="top|center"
            android:text="@string/screenshot"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/gamer"
            android:layout_width="250dp"
            android:layout_height="250dp"/>
        <ImageView
            android:layout_margin="16dp"
            android:scaleType="centerCrop"
            android:layout_gravity="start|bottom"
            android:contentDescription="@null"
            android:src="@drawable/asus_rog"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
    </FrameLayout>
    <androidx.core.widget.ContentLoadingProgressBar
        android:visibility="gone"
        android:layout_above="@+id/btn_make_screenshot"
        android:id="@+id/contentLoadingProgressBar"
        android:clickable="true"
        android:focusable="true"
        android:padding="140dp"
        android:background="@color/blanco_trasparente_88"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Button
        android:onClick="onMakeScreenshot"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/btn_screenshot"
        android:id="@+id/btn_make_screenshot"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/tomar_captura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:onClick="onSeeScreenshot"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_screenshot"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/ver_captura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>